--- a/grc/templates/policies/accessibility-statement.html
+++ b/grc/templates/policies/accessibility-statement.html
@@ -1,197 +1,170 @@
 {% extends 'base.html' %}
 
-{% block title %}Accessibility statement{% endblock %}
+{% block title %}{{ _('Accessibility statement') }}{% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
             <h1 class="govuk-heading-l">
-                Accessibility statement for Gender Recognition Certificate application service
+                {{ _('Accessibility statement for Gender Recognition Certificate application service') }}
             </h1>
             <p class="govuk-body">
-                We want everyone to be able to do what they need to do with our website, regardless of any access
-                needs due to a disability or condition.
+                {{ _('We want everyone to be able to do what they need to do with our website, regardless of any access needs due to a disability or condition') }}.
             </p>
 
             <h2 class="govuk-heading-m">
-                A detailed accessibility statement about the Gender Recognition Certificate application service
+                {{ _('A detailed accessibility statement about the Gender Recognition Certificate application service') }}
             </h2>
             <p class="govuk-body">
-                This page describes:
+                {{ _('This page describes:') }}
             </p>
             <ul class="govuk-list govuk-list--bullet">
-                <li>how accessible our website is</li>
-                <li>what to do if you have a problem</li>
-                <li>what we are doing to meet the regulations</li>
+                <li>{{ _('how accessible our website is') }}</li>
+                <li>{{ _('what to do if you have a problem') }}</li>
+                <li>{{ _('what we are doing to meet the regulations') }}</li>
             </ul>
             <p class="govuk-body">
-                This accessibility statement applies to the Gender Recognition Certificate application service and
-                document checker. It does not apply to the guidance about Gender Recognition Certificates on GOV.UK.
+                {{ _('This accessibility statement applies to the Gender Recognition Certificate application service and document checker') }}.
+                 {{ _('It does not apply to the guidance about Gender Recognition Certificates on GOV.UK') }}.
             </p>
 
             <h2 class="govuk-heading-m">
-                Using our website and services
+                {{ _('Using our website and services') }}
             </h2>
             <p class="govuk-body">
-                This service is run by the Government Equalities Office. We want as many people as possible to be
-                able to use this website. For example, that means you should be able to:
+                {{ _('This service is run by the Government Equalities Office') }}.
+                 {{ _('We want as many people as possible to be able to use this website') }}.
+                 {{ _('For example, that means you should be able to:') }}
             </p>
             <ul class="govuk-list govuk-list--bullet">
-                <li>zoom in up to 300% without problems</li>
-                <li>navigate most of the website using just a keyboard</li>
-                <li>navigate most of the website using speech recognition software</li>
-                <li>use most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)</li>
+                <li>{{ _('zoom in up to 300%% without problems') }}</li>
+                <li>{{ _('navigate most of the website using just a keyboard') }}</li>
+                <li>{{ _('navigate most of the website using speech recognition software') }}</li>
+                <li>{{ _('use most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)') }}</li>
             </ul>
             <p class="govuk-body">
-                We have also made the website text as simple as possible to understand.
+                {{ _('We have also made the website text as simple as possible to understand') }}.
             </p>
             <p class="govuk-body">
-                <a href="https://mcmw.abilitynet.org.uk/"
-                   target="_blank" class="govuk-link">
-                    AbilityNet (opens in a new tab)</a>
-                has advice on making your device easier to use if you have a disability.
+                <a href="https://mcmw.abilitynet.org.uk/" target="_blank" class="govuk-link">{{ _('AbilityNet (opens in a new tab)') }}</a> {{ _('has advice on making your device easier to use if you have a disability') }}.
             </p>
 
             <h2 class="govuk-heading-m">
-                How accessible this website is
+                {{ _('How accessible this website is') }}
             </h2>
             <p class="govuk-body">
-                We aim to meet international accessibility guidelines, however this may not always be possible,
-                or we may have missed a problem.
+                {{ _('We aim to meet international accessibility guidelines, however this may not always be possible, or we may have missed a problem') }}.
             </p>
             <p class="govuk-body">
-                We know some parts of this website are not fully accessible.
+                {{ _('We know some parts of this website are not fully accessible') }}.
             </p>
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    most older PDF documents that are linked to from this website are not fully accessible to
-                    screen reader software
+                    {{ _('most older PDF documents that are linked to from this website are not fully accessible to screen reader software') }}
                 </li>
                 <li>
-                    some GOV.UK Pay pages are not accessible, but we do not manage these pages – see the
-                    <a href="https://www.payments.service.gov.uk/accessibility-statement/"
-                       target="_blank" class="govuk-link">
-                        GOV.UK Pay accessibility statement (opens in a new tab)
-                    </a>
-                    for more information
+                    {{ _('some GOV.UK Pay pages are not accessible, but we do not manage these pages – see the') }} <a href="https://www.payments.service.gov.uk/accessibility-statement/" target="_blank" class="govuk-link">{{ _('GOV.UK Pay accessibility statement (opens in a new tab)') }}</a> {{ _('for more information') }}
                 </li>
             </ul>
             <p class="govuk-body">
-                We are working to fix the issue with inaccessible PDFs.
+                {{ _('We are working to fix the issue with inaccessible PDFs') }}.
             </p>
 
             <h2 class="govuk-heading-m">
-                What to do if you cannot access parts of this website
+                {{ _('What to do if you cannot access parts of this website') }}
             </h2>
             <p class="govuk-body">
-                If you need information on this website in a different format like accessible PDF, large print,
-                easy read, audio recording or braille, contact
-                <a href="mailto:GRPenquiries@justice.gov.uk" class="govuk-link">
-                    GRPenquiries@justice.gov.uk</a>.
+                {{ _('If you need information on this website in a different format like accessible PDF, large print, easy read, audio recording or braille, contact') }}
+                <a href="mailto:GRPenquiries@justice.gov.uk" class="govuk-link"> GRPenquiries@justice.gov.uk</a>.
             </p>
             <p class="govuk-body">
-                We will consider your request and get back to you within 5 working days.
+                {{ _('We will consider your request and get back to you within 5 working days') }}.
             </p>
 
             <h2 class="govuk-heading-m">
-                Reporting accessibility problems with this website
+                {{ _('Reporting accessibility problems with this website') }}
             </h2>
             <p class="govuk-body">
-                We are always looking to improve the accessibility of this website. If you find any problems not
-                listed on this page, or think we are not meeting accessibility requirements, contact
-                <a href="mailto:GRPenquiries@justice.gov.uk" class="govuk-link">
-                    GRPenquiries@justice.gov.uk</a>.
+                {{ _('We are always looking to improve the accessibility of this website') }}.
+                 {{ _('If you find any problems not listed on this page, or think we are not meeting accessibility requirements, contact') }}
+                <a href="mailto:GRPenquiries@justice.gov.uk" class="govuk-link"> GRPenquiries@justice.gov.uk</a>.
             </p>
 
             <h2 class="govuk-heading-m">
-                Enforcement procedure
+                {{ _('Enforcement procedure') }}
             </h2>
             <p class="govuk-body">
-                The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies
-                (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018
-                (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint,
-                contact the
-                <a href="https://www.equalityadvisoryservice.com/"
-                   target="_blank" class="govuk-link">
-                    Equality Advisory and Support Service (EASS) (opens in a new tab)</a>.
+                {{ _("The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’)") }}.
+                 {{ _('If you’re not happy with how we respond to your complaint, contact the') }} <a href="https://www.equalityadvisoryservice.com/" target="_blank" class="govuk-link">{{ _('Equality Advisory and Support Service (EASS) (opens in a new tab)') }}</a>.
             </p>
 
             <h2 class="govuk-heading-m">
-                Technical information about this website’s accessibility
+                {{ _('Technical information about this website’s accessibility') }}
             </h2>
             <p class="govuk-body">
-                The Government Equalities Office is committed to making its website accessible, in accordance with
-                the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.
+                {{ _('The Government Equalities Office is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018') }}.
             </p>
             <p class="govuk-body">
-                This website is partially compliant with the
-                <a href="https://www.w3.org/TR/WCAG21/"
-                   target="_blank" class="govuk-link">
-                    Web Content Accessibility Guidelines version 2.1 (opens in a new tab)</a>
-                AA standard, due to ‘the non-compliances’, listed below.
+                {{ _('This website is partially compliant with the') }} <a href="https://www.w3.org/TR/WCAG21/" target="_blank" class="govuk-link">{{ _('Web Content Accessibility Guidelines version 2.1 (opens in a new tab)') }}</a>{{ _(' AA standard, due to ‘the non-compliances’, listed below') }}.
             </p>
 
             <h3 class="govuk-heading-s">
-                Non-accessible content
+                {{ _('Non-accessible content') }}
             </h3>
             <p class="govuk-body">
-                The content listed below is not accessible for the following reasons.
+                {{ _('The content listed below is not accessible for the following reasons') }}.
             </p>
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    Statutory declaration PDFs have not been marked up with tags or text descriptions – this makes it
-                    difficult for people with screen readers to use them
+                    {{ _('Statutory declaration PDFs have not been marked up with tags or text descriptions – this makes it difficult for people with screen readers to use them') }}
                 </li>
             </ul>
 
             <h3 class="govuk-heading-s">
-                Non-compliance with the accessibility regulations
+                {{ _('Non-compliance with the accessibility regulations') }}
             </h3>
             <p class="govuk-body">
-                Statutory declaration PDFs have not been marked up with tags or text descriptions.
-                This makes it difficult for people with screen readers to use them.
+                {{ _('Statutory declaration PDFs have not been marked up with tags or text descriptions') }}.
+                {{ _('This makes it difficult for people with screen readers to use them') }}.
             </p>
             <p class="govuk-body">
-                We are aware of these issues and are working to fix them.
-            </p>
-
-            <h3 class="govuk-heading-s">
-                Disproportionate burden
-            </h3>
-            <p class="govuk-body">
-                We have not yet identified a part of the service where it would be a disproportionate burden on the
-                Government Equalities Office to resolve the non-compliance. If this becomes the case, we will publish
-                full details here explaining our decision.
+                {{ _('We are aware of these issues and are working to fix them') }}.
             </p>
 
             <h3 class="govuk-heading-s">
-                How we tested
+                {{ _('Disproportionate burden') }}
             </h3>
             <p class="govuk-body">
-                Testing has been conducted internally by Government Equalities Office staff and externally audited by the
-                <a href="https://digitalaccessibilitycentre.org/"
-                   target="_blank" class="govuk-link">
-                    Digital Accessibility Centre (opens in a new tab)</a>.
-                Where they have been checked for compliance, it has been against WCAG 2.1 AA.
+                {{ _('We have not yet identified a part of the service where it would be a disproportionate burden on the Government Equalities Office to resolve the non-compliance') }}.
+                 {{ _('If this becomes the case, we will publish full details here explaining our decision') }}.
             </p>
 
             <h3 class="govuk-heading-s">
-                What we are doing to improve accessibility
+                {{ _('How we tested') }}
             </h3>
             <p class="govuk-body">
-                We are working to fix any parts of the service which are not accessible.
+                {{ _('Testing has been conducted internally by Government Equalities Office staff and externally audited by the') }} <a href="https://digitalaccessibilitycentre.org/" target="_blank" class="govuk-link">{{ _('Digital Accessibility Centre (opens in a new tab)') }}</a>.
+                 {{ _('Where they have been checked for compliance, it has been against WCAG 2.1 AA') }}.
+            </p>
+
+            <h3 class="govuk-heading-s">
+                {{ _('What we are doing to improve accessibility') }}
+            </h3>
+            <p class="govuk-body">
+                {{ _('We are working to fix any parts of the service which are not accessible') }}.
             </p>
 
             <h2 class="govuk-heading-m">
-                Preparation of this accessibility statement
+                {{ _('Preparation of this accessibility statement') }}
             </h2>
             <p class="govuk-body">
-                This statement was prepared on 7th June 2022. It was last reviewed on 7th June 2022.
+                {{ _('This statement was prepared on 7th June 2022. It was last reviewed on 7th June 2022') }}.
             </p>
             <p class="govuk-body">
-                This website was last tested on 26th May 2022. The test was carried out by the Digital Accessibility Centre.
-                Where they have been checked for compliance, it has been against WCAG 2.1 AA.
+                {{ _('This website was last tested on 26th May 2022') }}.
+                 {{ _('The test was carried out by the Digital Accessibility Centre') }}.
+                 {{ _('Where they have been checked for compliance, it has been against WCAG 2.1 AA') }}.
             </p>
 
         </div>
