--- a/grc/templates/upload/name-change.html
+++ b/grc/templates/upload/name-change.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "upload/_upload-files-section.html" as upload_files_section %}
+{% import "govuk-design-system-templates/back_link.html" as back_link %}
 
-{% block title %}Upload name change documents{% endblock %}
+{% block title %}{{ _('Upload name change documents') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('taskList.index') }}" class="govuk-back-link">Back</a>
+    {{ back_link.renderFor('taskList.index') }}
 {% endblock %}
 
 {% block content %}
@@ -15,37 +16,24 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                Upload name change documents
+                {{ _('Upload name change documents') }}
             </h1>
             <p class="govuk-body">
-                This is where you can upload copies of all documents that show when you have changed your name to reflect your gender.
+                {{ _('This is where you can upload copies of all documents that show when you have changed your name to reflect your gender.') }}
             </p>
             <p class="govuk-body govuk-!-margin-bottom-2">
-                You can upload:
+                {{ _('You can upload:') }}
             </p>
             <ul class="govuk-body govuk-list govuk-list--bullet">
-                <li>deed poll documents, either enrolled or unenrolled</li>
-                <li>change of name documents (Scotland)</li>
-                <li>statutory declarations</li>
+                <li>{{ _('deed poll documents, either enrolled or unenrolled') }}</li>
+                <li>{{ _('change of name documents (Scotland)') }}</li>
+                <li>{{ _('statutory declarations') }}</li>
             </ul>
-            <p class="govuk-body">
-                You must upload a scan or good quality photograph of your name change documents.
-                If the document is longer than one page, you must upload every page.
-            </p>
-            <div class="govuk-warning-text govuk-!-margin-bottom-4 govuk-!-padding-0">
-                <span class="govuk-warning-text__icon govuk-!-margin-top-1" aria-hidden="true">!</span>
-                <strong class="govuk-warning-text__text">
-                    <span class="govuk-warning-text__assistive">Warning</span>
-                    We will only accept clear images of full pages.
-                    If you take a photograph, please make sure all 4 corners of each page are visible.
-                </strong>
-            </div>
-            <p class="govuk-body">
-                We process and protect all documents you upload in accordance with our
-                <a href="{{ url_for('policies.privacy_policy') }}"
-                target="_blank" class="govuk-link">
-                    privacy policy (opens in a new tab)</a>.
-            </p>
+            {{ upload_files_section.renderGoodQualityStatement() }}
+
+            {{ upload_files_section.renderWarning() }}
+
+            {{ upload_files_section.renderPrivacyPolicyStatement() }}
 
             {{ upload_files_section.render(
                 form,
@@ -53,7 +41,8 @@
                 deleteAllFilesInSectionForm,
                 currently_uploaded_files=currently_uploaded_files,
                 section_url=section_url,
-                duplicate_aws_file_names=duplicate_aws_file_names)
+                duplicate_aws_file_names=duplicate_aws_file_names,
+                lang_code=lang_code)
             }}
 
         </div>
